--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
 wheel==0.33.1
 Django==2.1.13
 django-cleanup==3.2.0
+django-filter==2.2.0
+djangorestframework==3.10.3
+Markdown==3.1.1
 Pillow==5.4.1
-mysqlclient==v1.4.2
+PyMySQL==0.9.2
 stripe==2.28.1
-# dev
-django-debug-toolbar==1.11
