--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - '3306:3306'
     environment:
-       MYSQL_DATABASE: 'freespotbeauty'
+       MYSQL_DATABASE: 'dbname'
        MYSQL_USER: 'root'
        MYSQL_PASSWORD: 'password'
        MYSQL_ROOT_PASSWORD: 'password'
