--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ django-cleanup==3.2.0
 django-filter==2.2.0
 djangorestframework==3.10.3
 Markdown==3.1.1
+mysqlclient==v1.4.2
 Pillow==5.4.1
 PyMySQL==0.9.2
 stripe==2.28.1
